[gd_scene load_steps=23 format=2]

[ext_resource path="res://mystic_woods_free_v0.2/sprites/characters/player.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=27]
radius = 8.0
height = 10.0

[sub_resource type="Animation" id=28]
resource_name = "Attack"
length = 0.45
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 12, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=29]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 24, 26 ]
}

[sub_resource type="Animation" id=30]
resource_name = "Idle"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.2, 0, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 0, 5 ]
}

[sub_resource type="Animation" id=31]
resource_name = "Walk"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5, 11 ]
}

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "Die"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachine" id=32]
states/Attack/node = SubResource( 34 )
states/Attack/position = Vector2( 563, 75 )
states/Die/node = SubResource( 35 )
states/Die/position = Vector2( 259, 167 )
states/Idle/node = SubResource( 36 )
states/Idle/position = Vector2( 343, 61 )
states/Walk/node = SubResource( 37 )
states/Walk/position = Vector2( 436, 256 )
transitions = [ "Idle", "Attack", SubResource( 38 ), "Idle", "Walk", SubResource( 40 ), "Idle", "Die", SubResource( 44 ), "Walk", "Die", SubResource( 45 ), "Attack", "Die", SubResource( 46 ), "Walk", "Idle", SubResource( 47 ), "Attack", "Idle", SubResource( 48 ), "Walk", "Attack", SubResource( 50 ) ]
start_node = "Idle"
end_node = "Die"
graph_offset = Vector2( 39, 25 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=33]

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 35.5, 16 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="Sprite" parent="."]
position = Vector2( 0, -18 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 6
vframes = 5
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 27 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 28 )
anims/Die = SubResource( 29 )
anims/Idle = SubResource( 30 )
anims/Walk = SubResource( 31 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 32 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 33 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2.5, 11 )
shape = SubResource( 49 )
disabled = true

[node name="HurtBox" type="Area2D" parent="." groups=["Hurtbox"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 27 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
